US4747 - Add Inline Giving to Live Stream Fix layout issue with flexbox.

--- a/crossroads.net/styles/pages/streaming.scss
+++ b/crossroads.net/styles/pages/streaming.scss
@@ -1017,7 +1017,7 @@ streaming, landing {
     }
 
     &__item {
-      flex: 1 1 auto;
+      flex: 1 1 100%;
       padding-left: 15px;
       padding-right: 15px;
 
